--- a/gb/news2008_3.md
+++ b/gb/news2008_3.md
@@ -1,4 +1,19 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="http://san4a.hua.midnightchannel.net/hua/7" rel="nofollow">大纪元</a> | <a href="http://san4a.hua.midnightchannel.net/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://san4a.hua.midnightchannel.net/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://san4a.hua.midnightchannel.net/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://san4a.hua.midnightchannel.net/hua/11" rel="nofollow">看中国</a> | <a href="http://san4a.hua.midnightchannel.net/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://san4a.hua.midnightchannel.net/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://san4a.hua.midnightchannel.net/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>生活消费</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/crlhi259/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/crlhi259/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/14/n11793464.md#1" target="_blank">颈椎不好百病生！常做2个动作 远离颈椎病</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/14/n11793464.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/Cervical-spondylosis0-200115-150x120.jpg" align ="left"></a>常常感觉到手部有莫名其妙的酸麻无力感，并且肩颈僵硬吗？是否反复落枕，甚至常常头痛、头晕？小心颈椎病已找上你！当颈椎出问题，血管和神经被压迫，此时不只引发脖子酸痛，还可能导致各种各样、甚至看似和颈椎毫不相关的病症出现。比如视力模糊、头晕头痛。平时可揉捏一些穴道放松肩颈肌肉，缓解颈椎病。2个简单运动，帮助缓解颈椎病......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 2:12 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/16/n11797024.md#1" target="_blank">英男在健身房展示自行车特技 没人像他这样</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/16/n11797024.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/Fotolia_98766378_Subscription_L-150x120.jpg" align ="left"></a>英国极限单车运动好手麦卡斯基尔（Danny MacAskill）每隔一段时间都会推出新作，以展现他驾驭自行车的高超技术，每每受到网民的青睐。在新年伊始，他推出一部在健身房拍摄的短片，让人们看得赞叹不已。有一点可以肯定的是，一般人绝对不会像他这样做运动。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 1:35 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11794605.md#1" target="_blank">为什么日本有些楼梯有红色和黄色记号？</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11794605.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1146157732-150x120.jpg" align ="left"></a>如果你注意观察的话，你会发现日本某些公共场所的楼梯标示有红色和黄色记号。这个看似平凡的记号，却是个便民措施，但包括日本人在内，有很多人还不知道它的功用。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 1:29 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11796301.md#1" target="_blank">味噌是盐的绝佳替代品 对抗高血压 还避免肥胖</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11796301.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/shutterstock_1441697945-150x120.jpg" align ="left"></a>越来越多西方医师与营养师认为，要对抗高血压，最简单的一种方式就是低盐饮食。味噌是盐的绝佳替代品，而且用味噌代替盐分还可减少脂肪、热量摄取，避免肥胖。味噌的平均含盐量仅有12%，加上它本身已有丰富的口感，可赋予食物相当好的滋味与芳香。所以用味噌调味，不仅能大量降低盐的用量，也比光用盐调味的食物更美味。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 6:11 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11795710.md#1" target="_blank">多伦多去年房价均涨5.5万 近普通人年收入</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11795710.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/20334206-150x120.jpg" align ="left"></a>大多伦多地区房市经历2018年低迷后，去年开始复苏，房价涨幅再次超多数家庭年入涨幅。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 11:35 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11794838.md#1" target="_blank">美得像一幅画 日本爸自学做出绝美生鱼片摆盘</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11794838.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/28ab9a1e59b543546f42e5fa02f26403-150x120.jpg" align ="left"></a>当他尝试使用河豚之外的鱼种诸如生鲑鱼片，鲷鱼，比目鱼和金枪鱼片生鱼片摆盘时，由于鱼的肉质，鱼皮 呈现出不同的色泽、花纹和透明度；爆发出他创作的热情和火花。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 9:56 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/14/n11792330.md#1" target="_blank">写实3D蛋糕真的能吃吗？甜点师一刀切给你看</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/14/n11792330.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/6272e02c0042e5c9f2e63a00a1e2a176-150x120.jpg" align ="left"></a>被称为艺术蛋糕的造型蛋糕已风行多年，然而，时至今日蛋糕师们有了更多的创意，做出千变万化、让人目不睱给的作品；国外一位本·库伦（Ben Cullen）的网友，他更是创意大爆发，做出很多超乎人们想像力的蛋糕作品。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 9:42 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/14/n11792421.md#1" target="_blank">8岁孩精壮腹肌怎么练出来的？他是体坛明日之星</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/14/n11792421.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/07107b22d2e5b83b137a2a5938af5128-150x120.jpg" align ="left"></a>8岁的鲁道夫有精壮腹肌让人叹为观止，有人说看到他的腹肌，不禁令人心生敬畏！然而那么小的儿童怎么会练出那一身羡煞许多人的腹肌呢？不只是腹肌，他还被称为“世界上最快的孩子”！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 9:23 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11794946.md#1" target="_blank">新型放射疗法瞬间杀死肿瘤 却不伤健康组织</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11794946.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/radiation_366474557-150x120.jpg" align ="left"></a>新型“瞬间放射疗法”技术，将传统放射疗法几周内向患者照射的辐射量，在几百毫秒的瞬间一次性照射在肿瘤上，成功使癌细胞凋亡，而健康细胞却不受损。目前对小鼠身上较小的肿瘤实验成功。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 6:01 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11794941.md#1" target="_blank">在办公桌上吃午餐不利健康</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11794941.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/l4saLre9-150x120.jpeg" align ="left"></a>医疗服务公司BUPA数据显示，约三分之一的英国上班族习惯在办公桌上吃午饭。43%说太忙没时间离开电脑吃饭。另一份来自隐形眼镜商AcuVue的调查显示，现代人均每年有1700个小时在电脑前度过。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 5:58 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11794448.md#1" target="_blank">美国俄亥俄州天空出现橘红色闪光 原因不明</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11794448.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/shutterstock_129616220-150x120.jpg" align ="left"></a>星期天（1月12日）晚上，美国俄亥俄州的天空出现多次橘红色闪光，其亮度足以照亮大半个天空，但有关当局无法确定其成因为何。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 2:45 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11794416.md#1" target="_blank">没时间去健身房？20款健身app充当私人教练</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11794416.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/Pilates_1303193914-150x120.jpg" align ="left"></a>如今我们可以充分利用现代科技的便捷，远端观看健身教练们的动作示范。与其因为以上原因而放弃健身计划，不如使用我们为您推荐的这几款备受专业人士好评的健身app，让手机充当您的私人教练，随时对自己的锻炼进程了若指掌。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 2:41 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/14/n11793729.md#1" target="_blank">跑马拉松让血管年轻4岁！医师教你跑步诀窍</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/14/n11793729.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/marathon_641673166-150x120.jpg" align ="left"></a>英国研究发现，马拉松新手经过6个月的训练后，血管年轻4岁，还降低了心脏病和中风发作的风险。初次参与马拉松的跑者，陈冠诚建议最好在比赛前一年就开始训练，例如计划明年参与马拉松，今年就开始练跑。训练要循序渐进，从平常能接受的强度逐渐增加跑步里程，每周增加10％。无论是平常的练跑或是马拉松比赛当天，都要随时补充水分。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 2:37 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11793982.md#1" target="_blank">德国饮食传统 (4) ：豪迈的啤酒文化</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11793982.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1038282434-150x120.jpg" align ="left"></a>啤酒是德国文化中不可或缺的一部分。据统计，德国有超过1500间啤酒厂，年产量近90亿公升。平均每个德国人，一年要喝下超过100公升的啤酒。究竟，啤酒为何会成为德国重要的特产呢？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 2:01 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11793809.md#1" target="_blank">订购绿色快递！ 6间线上园艺商店推荐</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11793809.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/shutterstock_1023699787-150x120.jpg" align ="left"></a>现在购买盆栽，不一定需要大老远跑到园艺店里，有许多优质、可靠的线上园艺商店，提供了快递到府的服务，让我们随时可以帮自己订购一份“绿色快递”。以下是我们推荐的六间线上商店，希望你能从中选到喜爱的植物伙伴。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 1:44 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11794160.md#1" target="_blank">大象罕见爬墙欲偷摘芒果 镜头全都录</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11794160.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1192690536-150x120.jpg" align ="left"></a>大象的动作并不算敏捷，所以人们不认为它们会爬墙和当小偷。然而，最近在尚比亚却有一只大象爬墙欲偷摘芒果，而且全被镜头拍了下来。这个罕见画面让网民们大开眼界。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 1:31 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/13/n11790562.md#1" target="_blank">一上场就吸引观众注意力 上场介绍词2要点</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/13/n11790562.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/20200114_shouhui_GettyImages-114402120_01-150x120.jpg" align ="left"></a>一个好的介绍能为你的表演设定好的风格基础，而差的介绍会挖坑给你跳，你还得花些时间才能爬出来。介绍很重要，所以花些时间准备一个适合你的介绍词。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 11:09 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/13/n11789417.md#1" target="_blank">打鼾浅说</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/13/n11789417.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/stock-photo-snore-problem-concept-illustration-of-normal-airway-and-obstructive-sleep-apnea-597057590-150x120.jpg" align ="left"></a>值得一提的是，打鼾是睡眠呼吸中止症的前兆，睡眠呼吸中止症是一种致命的疾病，最直接受害者就是枕边人，医界对睡眠呼吸中止症的患者有个形容，称他们为”在梦中被死神掐住脖子的人”，因为他们睡眠常伴随鼾声，无法正常呼吸，有时会突然没有声息，停止呼吸长达十至九十秒，在窒息中慢慢走向死亡，接着一个大声的喘息，或鼻息又恢复了呼吸，不久.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 6:50 AM			</td></tr>
@@ -40,23 +55,5 @@
 
 资料来源：旧金山、南湾、东湾MLS
 以上数据由星河地产（Starriver Rea.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月14日 1:19 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/13/n11790272.md#1" target="_blank">12月再小跌 2019旺季不旺，淡季不淡</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/13/n11790272.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/11.11.57-150x120.png" align ="left"></a>文：李欧?大纪元
-随着2020年一月的到来，去年十二月的房市表现也出炉了，在这个佳节淡季中，不意外地房价、交易量再度下跌，从我们针对的部分湾区房市观察中，交易量比十一月小跌4.43%，销售中位价仅小幅下滑1.65%，价格甚至比八、九月时稍高（详见表一）。总体表现也比2018年同期更好，当时只有1128个交易，中位价约.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月14日 12:44 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/13/n11790810.md#1" target="_blank">哈佛大学研究实证：蔬菜汤不只抗癌 有九大功效</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/13/n11790810.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/vegetable-soup-benefit_755253565-150x120.jpg" align ="left"></a>专攻免疫力和抗癌领域的哈佛医师高桥弘，根据多年研究，发明出运用常见食材熬煮的“常备抗癌蔬菜汤”。他认为，蔬果富含珍贵的植化素，用高丽菜、胡萝卜、洋葱、南瓜四种蔬菜，不经调味煮出的蔬菜汤，有非常好的抗病功效。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 11:48 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/13/n11790697.md#1" target="_blank">《吕氏春秋》中的“养生三患” 是哪三患？</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/13/n11790697.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/lvshichunqiu-200113-150x120.jpg" align ="left"></a>《吕氏春秋》由战国时期秦国相国吕不韦及其门人编纂而成，是一本杂家代表作。书中有专论养生的文章，提到了“养生三患”。第一患，患好逸恶劳。
-
-“出则以车，入则以辇，务以自佚，命之曰招蹙之机。”有些人出门就坐车，回家也坐车，以舒服快活为第一要务，这会让人短命的！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 11:04 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/13/n11790724.md#1" target="_blank">去年12月 多伦多房价涨12% 销量升17.4%</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/13/n11790724.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/can-sold-150x120.jpg" align ="left"></a>多伦多地产局（TREB）数据显示，去年12月多伦多房屋销量同比升17.4%，平均房价同比涨近12%，价量双双创去年下半年新高。尽管如此，由于去年上半年价量表现平平，去年全年房屋销量基本保持在过去10年中的年均中位数水平。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 10:39 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/13/n11790706.md#1" target="_blank">加央行行长警告：房市泡沫可能卷土重来</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/13/n11790706.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/10505470-150x120.jpg" align ="left"></a>加拿大央行行长波洛兹（Stephen Poloz）1月9日警告，卑诗等多个省近来房市升温，温哥华投机炒房可能卷土重来，泡沫再现，央行目前在密切关注。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 10:27 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/13/n11790192.md#1" target="_blank">幽默学得来！三个视角的转换让观众发笑</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/13/n11790192.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/1707061514512483-150x120.jpg" align ="left"></a>脱口秀演员在讲段子或表演段子时会在三个视角间转换，但是，这项关键基本功却从未有人系统性地分析、讨论。而一旦了解使用方法后，你会发现它对于脱口秀表演和让观众发笑有多重要。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 9:05 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/11/n11785004.md#1" target="_blank">摄影师老爸拍女儿0～20岁 5分钟看女大18变</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/11/n11785004.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/fc9bc005ddf71a1d48522f8eeacde21d-150x120.jpg" align ="left"></a>人家说时光似箭、岁月如梭；当我们看到这个拍摄女儿0～20岁的视频时，不用多余的文字注解、不受地域区隔；你就明白时光飞逝的意思了，尤其是为人父母的人，看到这个视频都会了然于胸的会心一笑。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 7:35 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/10/n11782340.md#1" target="_blank">流传113年阿嬷的香奈儿 明星花露水又回来了</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/10/n11782340.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/c4792ca3daeffc1753a6a4cb07fe96e5-150x120.jpg" align ="left"></a>从清光绪33年就已推出，至今逾百年历史的“明星花露水”，在2019年3月惊传停产，引起网友一片哀嚎；不过幸好，它又被恢复生产了，在2020年将重新上市，这下阿嬷们又可以放心的使用，让它继续飘香了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 7:25 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/13/n11789062.md#1" target="_blank">德国饮食传统 (3) ：德国的药酒文化</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/13/n11789062.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-522280202-150x120.jpg" align ="left"></a>药酒并不是中国人的专利，在世界各地都有不同的药酒，这也是传统草药疗法的一部分。这次我们要介绍的德国人，也是爱喝药酒的民族之一。据统计，德国人每年在草药上的总支出超过20亿美元。在大鱼大肉之后，相较于服用胃肠药，德国人们更爱喝些草药酒来帮助消化。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 4:00 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/13/n11789116.md#1" target="_blank">镁是放松情绪的天然镇静剂 “这些食物”能补充</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/13/n11789116.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/magnesium-food_522984916-150x120.jpg" align ="left"></a>时常感到紧张、焦躁或忧郁吗？这可能是体内缺镁的关系。镁有助于稳定情绪和松弛肌肉，只是现代人饮食习惯改变，爱吃加工食品和大鱼大肉，因此普遍有缺镁的情况。在饮食中多摄取一些含镁食物，能让你心情变好。镁有“天然镇静剂”之称，能放松神经肌肉，是让人心情平静、愉快的矿物质。还能影响血糖、血压的调控。富含镁的食物包括：......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 2:46 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/12/n11786798.md#1" target="_blank">德国饮食传统 (2) ：体现节约的德国馄饨</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/12/n11786798.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/15e9072dc1d235ca_ttl7dayqjL_shutterstock_1301549560-150x120.jpg" align ="left"></a>传说中，德国馄饨是在17世纪时，由莫尔布龙修道院（Maulbronn）的西多会修士所创出的。而且，这道菜被创造出来，其实是因为有修士想要偷偷吃肉。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 1:25 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/13/n11789381.md#1" target="_blank">澳洲野火烧不尽 动物园园长把动物带回家养</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/13/n11789381.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1198632841-150x120.jpg" align ="left"></a>澳洲野火延烧了几个月，不但迫使许多人撤离，也让数不清的动物失去家园、甚至生命。有一座动物园的园长为了保护园内动物的安全，索性把体型较小的动物带回家照顾。而带不走的大型动物，也有相关人员留下来看守。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 1:22 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/7/n11775243.md#1" target="_blank">针灸治疗失眠益处多</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/7/n11775243.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/10/1409300914252483-150x120.jpg" align ="left"></a>针灸治疗失眠效果明显。“失眠”在中医上会归类于“大脑失调”。“针灸”，可以改善大脑的“兴奋”和“抑制”，帮助“睡”和“醒”之间有正常的节奏，采用“针灸疗法”治疗失眠，是极为安全可靠的，而且完全无副作用。有个长年受失眠之苦的病患找我看诊，只接受了二星期共十次的针灸，每晚便可增加2小时的睡眠，治疗一个月后，失眠问题消失，每.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 12:55 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/11/n11786298.md#1" target="_blank">受喜爱也是最脏的化妆品 使用不当小心脸部危机</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/11/n11786298.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/cosmetics-health_175336325-copy-150x120.jpg" align ="left"></a>如果化妆品保养不当、化妆工具没有适当清洗，细菌会不断在上面累积，用后导致脸部长脓包，或引发其它肌肤疾病。使用过的化妆品中，约8到9成有细菌污染，包含金黄色葡萄球菌、大肠杆菌与弗氏柠檬酸杆菌。美妆蛋最脏，唇蜜排第二。另外，使用过期化妆品也很危险。97.9%的人会在化妆品过期后继续使用。如何正确清洗、保存化妆品？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 12:56 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/12/n11786682.md#1" target="_blank">德国饮食传统 (1) ：中午前吃完的白香肠</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/12/n11786682.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/15e9008cb33366da_ttl7daydzr_shutterstock_1023386170-150x120.jpg" align ="left"></a>德国的香肠种类多达上千种，各区域都有风味不同的特色香肠，如味道浓厚的法兰克福香肠，尺寸小巧的纽伦堡香肠，以及我们今天介绍一定要在中午前吃完的白香肠。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月12日 4:09 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/news2008_2.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/news2008.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/news2008_2.md#1">2</a>&nbsp;&nbsp;3&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/news2008_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/news2008_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/news2008_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/news2008_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/news2008_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/news2008_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/news2008_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/news2008_4.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/crlhi259/djy/blob/master/gb/news2008_3.md#1<br><a href="https://github.com/crlhi259/djy/blob/master/gb/news2008_3.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/crlhi259/djy/blob/master/gb/news2008_3.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news2008_3.htm">http://www.epochtimes.com/gb/news2008_3.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
